Changes and fixes

--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -49,5 +49,9 @@
         <button class="button_text">Load more</button>
       </div>
     </div>
+    <footer>
+      <a href="https://maxtarasenko.github.io/goit-fe-course/">
+        <img src="./img/logo.png" alt="" id="logo"></a>
+    </footer>
   </body>
 </html>
