Changes and fixes

--- a/index.html
+++ b/index.html
@@ -8,21 +8,40 @@
     <title>goit-fe-course</title>
   </head>
   <body>
-    <header>
-      <a href="https://maxtarasenko.github.io/goit-fe-course/">
-        <img src="./githome/img/logo.png" alt="logo"
-      /></a>
-      <p>Home Git repository "goit-fe-course"</p>
-    </header>
-    <nav>
-      <ul>
-        <li>
-          <a
-            href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-01/"
-            >Module 1-2</a
-          >
-        </li>
-      </ul>
-    </nav>
+    <div id="header_wrap">
+      <header>
+        <a
+          id="forkme_banner"
+          href="https://github.com/MaxTarasenko/goit-fe-course"
+          >View on GitHub</a
+        >
+        <a href="https://maxtarasenko.github.io/goit-fe-course/">
+          <img src="./githome/img/logo.png" alt="logo"
+        /></a>
+        <p>My GitHub Pages "goit-fe-course"</p>
+      </header>
+    </div>
+    <div id="nav_wrap">
+      <nav>
+        <div class="nav_wrap_list">
+          <div class="nav_wrap_list_border">
+            <a
+              href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-01/"
+              >Module 1-2</a
+            >
+          </div>
+        </div>
+        <div class="nav_wrap_list">
+          <div class="nav_wrap_list_border">
+            <a href="#">Module 3</a>
+          </div>
+        </div>
+        <div class="nav_wrap_list">
+          <div class="nav_wrap_list_border">
+            <a href="#">Module 3</a>
+          </div>
+        </div>
+      </nav>
+    </div>
   </body>
 </html>
