--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="nav_wrap_list">
           <div class="nav_wrap_list_border">
-            <a href="#">Module 3</a>
+            <a href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-03/">Module 3</a>
           </div>
         </div>
         <div class="nav_wrap_list">
