--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -18,7 +18,7 @@
       </ul>
     </nav>
     <div>
-      <artical class="carcass mr_60">
+      <article class="carcass mr_60">
         <img class="mb_30" src="./img/festival.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
         <p class="headline mb_30">More than just a music festival</p>
@@ -41,8 +41,8 @@
             magnam aliquam quaerat voluptatem.</span
           >
         </p>
-      </artical>
-      <artical class="carcass">
+      </article>
+      <article class="carcass">
         <img class="mb_30" src="./img/coffee.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
         <p class="headline mb_30">Life tastes better with coffee</p>
@@ -65,8 +65,8 @@
             magnam aliquam quaerat voluptatem.</span
           >
         </p>
-      </artical>
-      <artical class="carcass mr_60">
+      </article>
+      <article class="carcass mr_60">
         <img class="mb_30" src="./img/bridge.png" alt="" />
         <p class="caption mb_30">photodiary</p>
         <p class="headline mb_30">American dream</p>
@@ -88,8 +88,8 @@
             eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
             voluptatem.</span>
         </p>
-      </artical>
-      <artical class="carcass">
+      </article>
+      <article class="carcass">
         <img class="mb_30" src="./img/alps.png" alt="" />
         <p class="caption mb_30">photodiary</p>
         <p class="headline mb_30">A day exploring the Alps</p>
@@ -111,8 +111,8 @@
             eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
             voluptatem.</span>
         </p>
-      </artical>
-      <artical class="carcass mr_60">
+      </article>
+      <article class="carcass mr_60">
         <img class="mb_30" src="./img/womman.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
         <p class="headline mb_30">Top 10 song for running</p>
@@ -134,8 +134,8 @@
             eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
             voluptatem.</span>
         </p>
-      </artical>
-      <artical class="carcass">
+      </article>
+      <article class="carcass">
         <img class="mb_30" src="./img/cold_road.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
         <p class="headline mb_30">Cold winter days</p>
@@ -157,7 +157,7 @@
             eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
             voluptatem.</span>
         </p>
-      </artical>
+      </article>
       <div class="button">
         <button type="button">Load more</button>
       </div>
