Changing the title from p to h2

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -21,7 +21,7 @@
       <article class="carcass mr_60">
         <img class="mb_30" src="./img/festival.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
-        <p class="headline mb_30">More than just a music festival</p>
+        <h2 class="headline mb_30">More than just a music festival</h2>
         <p class="text mb_135">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -45,7 +45,7 @@
       <article class="carcass">
         <img class="mb_30" src="./img/coffee.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
-        <p class="headline mb_30">Life tastes better with coffee</p>
+        <h2 class="headline mb_30">Life tastes better with coffee</h2>
         <p class="text mb_135">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -69,7 +69,7 @@
       <article class="carcass mr_60">
         <img class="mb_30" src="./img/bridge.png" alt="" />
         <p class="caption mb_30">photodiary</p>
-        <p class="headline mb_30">American dream</p>
+        <h2 class="headline mb_30">American dream</h2>
         <p class="text mb_135">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -92,7 +92,7 @@
       <article class="carcass">
         <img class="mb_30" src="./img/alps.png" alt="" />
         <p class="caption mb_30">photodiary</p>
-        <p class="headline mb_30">A day exploring the Alps</p>
+        <h2 class="headline mb_30">A day exploring the Alps</h2>
         <p class="text mb_135">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -115,7 +115,7 @@
       <article class="carcass mr_60">
         <img class="mb_30" src="./img/womman.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
-        <p class="headline mb_30">Top 10 song for running</p>
+        <h2 class="headline mb_30">Top 10 song for running</h2>
         <p class="text mb_30">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -138,7 +138,7 @@
       <article class="carcass">
         <img class="mb_30" src="./img/cold_road.png" alt="" />
         <p class="caption mb_30">lifestyle</p>
-        <p class="headline mb_30">Cold winter days</p>
+        <h2 class="headline mb_30">Cold winter days</h2>
         <p class="text mb_30">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
