--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -9,20 +9,22 @@
     <title>module-03</title>
   </head>
   <body>
-    <nav class="mb_100">
-      <ul>
-        <li><a href="#">lifestyle</a></li>
-        <li><a href="#">photodiary</a></li>
-        <li><a href="#">music</a></li>
-        <li><a href="#">travel</a></li>
-      </ul>
-    </nav>
-    <div>
-      <article class="carcass mr_60">
-        <img class="mb_30" src="./img/festival.png" alt="" />
-        <p class="caption mb_30">lifestyle</p>
-        <h2 class="headline mb_30">More than just a music festival</h2>
-        <p class="text mb_135">
+    <div class="container">
+      <nav class="navigation">
+        <ul>
+          <li><a href="#">lifestyle</a></li>
+          <li><a href="#">photodiary</a></li>
+          <li><a href="#">music</a></li>
+          <li><a href="#">travel</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container">
+      <article class="carcass">
+        <img class="img" src="./img/festival.png" alt="" />
+        <p class="caption">lifestyle</p>
+        <h2 class="headline">More than just a music festival</h2>
+        <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris<span>
@@ -43,10 +45,10 @@
         </p>
       </article>
       <article class="carcass">
-        <img class="mb_30" src="./img/coffee.png" alt="" />
-        <p class="caption mb_30">lifestyle</p>
-        <h2 class="headline mb_30">Life tastes better with coffee</h2>
-        <p class="text mb_135">
+        <img class="img" src="./img/coffee.png" alt="" />
+        <p class="caption">lifestyle</p>
+        <h2 class="headline">Life tastes better with coffee</h2>
+        <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris<span>
@@ -66,96 +68,100 @@
           >
         </p>
       </article>
-      <article class="carcass mr_60">
-        <img class="mb_30" src="./img/bridge.png" alt="" />
-        <p class="caption mb_30">photodiary</p>
-        <h2 class="headline mb_30">American dream</h2>
-        <p class="text mb_135">
+      <article class="carcass">
+        <img class="img" src="./img/bridge.png" alt="" />
+        <p class="caption">photodiary</p>
+        <h2 class="headline">American dream</h2>
+        <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris<span> nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
+          minim veniam, quis nostrud exercitation ullamco laboris<span>
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum. Sed ut
             perspiciatis unde omnis iste natus error sit voluptatem accusantium
             doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
             inventore veritatis et quasi architecto beatae vitae dicta sunt
-            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-            odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-            eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-            voluptatem.</span>
+            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+            aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+            dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+            quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem.</span
+          >
         </p>
       </article>
       <article class="carcass">
-        <img class="mb_30" src="./img/alps.png" alt="" />
-        <p class="caption mb_30">photodiary</p>
-        <h2 class="headline mb_30">A day exploring the Alps</h2>
-        <p class="text mb_135">
+        <img class="img" src="./img/alps.png" alt="" />
+        <p class="caption">photodiary</p>
+        <h2 class="headline">A day exploring the Alps</h2>
+        <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris<span> nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
+          minim veniam, quis nostrud exercitation ullamco laboris<span>
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum. Sed ut
             perspiciatis unde omnis iste natus error sit voluptatem accusantium
             doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
             inventore veritatis et quasi architecto beatae vitae dicta sunt
-            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-            odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-            eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-            voluptatem.</span>
-        </p>
-      </article>
-      <article class="carcass mr_60">
-        <img class="mb_30" src="./img/womman.png" alt="" />
-        <p class="caption mb_30">lifestyle</p>
-        <h2 class="headline mb_30">Top 10 song for running</h2>
-        <p class="text mb_30">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris<span> nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum. Sed ut
-            perspiciatis unde omnis iste natus error sit voluptatem accusantium
-            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-            inventore veritatis et quasi architecto beatae vitae dicta sunt
-            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-            odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-            eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-            voluptatem.</span>
+            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+            aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+            dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+            quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem.</span
+          >
         </p>
       </article>
       <article class="carcass">
-        <img class="mb_30" src="./img/cold_road.png" alt="" />
-        <p class="caption mb_30">lifestyle</p>
-        <h2 class="headline mb_30">Cold winter days</h2>
-        <p class="text mb_30">
+        <img class="img" src="./img/womman.png" alt="" />
+        <p class="caption">lifestyle</p>
+        <h2 class="headline">Top 10 song for running</h2>
+        <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris<span> nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
+          minim veniam, quis nostrud exercitation ullamco laboris<span>
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum. Sed ut
             perspiciatis unde omnis iste natus error sit voluptatem accusantium
             doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
             inventore veritatis et quasi architecto beatae vitae dicta sunt
-            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-            odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-            eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-            voluptatem.</span>
+            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+            aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+            dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+            quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem.</span
+          >
+        </p>
+      </article>
+      <article class="carcass">
+        <img class="img" src="./img/cold_road.png" alt="" />
+        <p class="caption">lifestyle</p>
+        <h2 class="headline">Cold winter days</h2>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris<span>
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum. Sed ut
+            perspiciatis unde omnis iste natus error sit voluptatem accusantium
+            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+            inventore veritatis et quasi architecto beatae vitae dicta sunt
+            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+            aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+            dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+            quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem.</span
+          >
         </p>
       </article>
       <div class="button">
