Set up a reference to module-04

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="nav_wrap_list">
           <div class="nav_wrap_list_border">
-            <a href="#">Module 3</a>
+            <a href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-04/">Module 4</a>
           </div>
         </div>
       </nav>
