--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>module-04</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <header class="navigation clearfix">
+        <div class="navigation_logo">
+          <a href="#"><span>m</span>art</a>
+        </div>
+        <nav class="navigation_menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Page</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
+      </header>
+      <article>
+        <h1 class="headline">Featured Products</h1>
+        <div class="box">
+          <img src="./img/heel.png" alt="heel" />
+          <div class="box_bline">
+            <h2>Blue Tshirt</h2>
+            <div class="box_square">
+              <p>$26</p>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
+  </body>
 </html>
