Added content and styles

--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -25,9 +25,10 @@
           </ul>
         </nav>
       </header>
-      <article>
+      <article class="gallery clearfix">
         <h1 class="headline">Featured Products</h1>
         <div class="box">
+          <a href="#">
           <img src="./img/heel.png" alt="heel" />
           <div class="box_bline">
             <h2>Blue Tshirt</h2>
@@ -35,7 +36,106 @@
               <p>$26</p>
             </div>
           </div>
+          </a>
         </div>
+        <div class="box">
+          <a href="#">
+          <img src="./img/watch.png" alt="heel" />
+          <div class="box_bline">
+            <h2>WOMAN shirt</h2>
+            <div class="box_square">
+              <p>$31</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="#">
+          <img src="./img/hat.png" alt="heel" />
+          <div class="box_bline">
+            <h2>YELLOW Tshirt</h2>
+            <div class="box_square">
+              <p>$21</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="#">
+          <img src="./img/bag.png" alt="heel" />
+          <div class="box_bline">
+            <h2>Cool lingerie</h2>
+            <div class="box_square">
+              <p>$56</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="#">
+          <img src="./img/bag2.png" alt="heel" />
+          <div class="box_bline">
+            <h2>Blue Tshirt</h2>
+            <div class="box_square">
+              <p>$26</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="#">
+          <img src="./img/Strap.png" alt="heel" />
+          <div class="box_bline">
+            <h2>WOMAN shirt</h2>
+            <div class="box_square">
+              <p>$31</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="#">
+          <img src="./img/shoes.png" alt="heel" />
+          <div class="box_bline">
+            <h2>YELLOW Tshirt</h2>
+            <div class="box_square">
+              <p>$21</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="#">
+          <img src="./img/glasses.png" alt="heel" />
+          <div class="box_bline">
+            <h2>Cool lingerie</h2>
+            <div class="box_square">
+              <p>$56</p>
+            </div>
+          </div>
+          </a>
+        </div>
+      </article>
+      <article class="blog clearfix">
+          <h1 class="headline">Latest News</h1>
+          <div class="blog_box">
+            <img src="./img/ipad.png" alt="">
+            <h2>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h2>
+            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+            <button>Read More</button>
+          </div>
+          <div class="blog_box">
+            <img src="./img/slide1.png" alt="">
+            <h2>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h2>
+            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+            <button>Read More</button>
+          </div>
+          <div class="blog_box">
+            <img src="./img/bus.png" alt="">
+            <h2>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h2>
+            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+            <button>Read More</button>
+          </div>
       </article>
     </div>
   </body>
