--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="box">
           <a href="#">
-          <img src="./img/Strap.png" alt="heel" />
+          <img src="./img/strap.png" alt="heel" />
           <div class="box_bline">
             <h2>WOMAN shirt</h2>
             <div class="box_square">
