--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -134,7 +134,7 @@
             <img src="./img/bus.png" alt="">
             <h2>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h2>
             <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-            <button>Read More</button>
+            <button type="button">Read More</button>
           </div>
       </article>
     </div>
